# toggl-client

./: CMakeLists.txt  CMakePresets.json  sample.json  vcpkg.json
include/toggl/: client.hpp  commands.hpp
src/: cli.cpp  curl_fetch.hpp
